--- a/src/App.css
+++ b/src/App.css
@@ -6,30 +6,6 @@
   --yellow: rgba(255, 223, 158, 0.397);
 }
 
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 body {
   font-family: Arial Rounded MT Bold, Helvetica Rounded, Arial, sans-serif;
@@ -60,10 +36,11 @@ p, td{
 }
 
 
-#mobileVsDesktop{
+/* #mobileVsDesktop{
+  background-color: blue;
   display:flex;
   flex-direction: row;
-  @media (max-width){
+  @media (max-width: 768px){
     flex-direction: column;
   }
-}
+} */
