--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
   --dark-orange: rgba(255;
   152, 26, 80);
   --yellow: rgba(255, 223, 158, 0.397);
-  --white: white;
+  --white: rgba(255, 255, 255, 0.877);
 }
 
 body {
@@ -14,6 +14,10 @@ body {
 
 p, td {
   font-size: 1em;
+}
+
+a {
+  padding: 0.25em;
 }
 
 .tablePromps {
@@ -36,6 +40,27 @@ p, td {
   color: var(--dark-orange);
 }
 
+.secondaryNavbar {
+  position: relative;
+  background-color: #56AFEC;
+  height: 2em;
+  font-size: 1em;
+}
+
+.navSearchBar {
+  color: var(--white);
+  margin-right: 3.5em;
+}
+
+.bioDiv {
+  width: 30%;
+  margin-left: 0;
+}
+
+.bioP {
+  margin-bottom: 0;
+}
+
 .headerLinks {
   position: relative;
   height: 30px;
@@ -43,19 +68,38 @@ p, td {
 }
 
 .extendedNetwork {
-  font-size: 2em;
+  font-size: 1.6em;
   border: 2px solid black;
-  padding: 2em;
+  padding: 1em;
   margin: 1em;
   height: 4em;
   text-align: center;
-  width: 15em;
+  width: 12em;
+}
 
-  @media (min-width:500px){
-    width: 30em;
+@media (min-width:500px) {
+  .extendedNetwork {
+    font-size: 1.75em;
+    width: 18em;
+    padding: 2em;
+    margin: 1em;
+    height: 4em;
   }
-  @media (min-width:800px){
-    width: 40em;
+}
+
+@media (min-width:800px) {
+  .extendedNetwork {
+    font-size: 2em;
+    padding: 2em;
+    margin: 1em;
+    height: 4em;
+    width: 24em;
+  }
+}
+
+@media (min-width:1100px) {
+  .extendedNetwork {
+    width: 38.25em;
   }
 }
 
