refactoring some css

--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@ a {
 
 .yellowTable {
   background-color: var(--yellow);
-  color: var(--dark-orange);
+  color: var(--black);
 }
 
 .secondaryNavbar {
