--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ body {
 
 p, td {
   font-size: 1em;
+  
 }
 
 a {
@@ -40,7 +41,7 @@ a {
 
 .yellowTable {
   background-color: var(--yellow);
-  color: var(--black);
+  color: var(--b);
 }
 
 .secondaryNavbar {
@@ -64,9 +65,15 @@ a {
   margin-bottom: 0;
 }
 
+.navbar{
+  display:flex;
+  justify-content: space-between;
+}
+
+
 .headerLinks {
   position: relative;
-  height: 30px;
+  height: 2em;
   color: var(--white);
 }
 
@@ -75,9 +82,9 @@ a {
   border: 2px solid var(--black);
   padding: 1em;
   margin: 1em;
-  height: 4em;
+  height: 3em;
   text-align: center;
-  width: 12em;
+  width: 14em;
 }
 
 .contactTable {
@@ -97,6 +104,10 @@ a {
     margin: 1em;
     height: 4em;
   }
+
+  .headerLinks {
+    height: 2em;
+  }
 }
 
 @media (min-width:800px) {
@@ -107,11 +118,19 @@ a {
     height: 4em;
     width: 24em;
   }
+
+  .headerLinks {
+    height: 2.25em;
+  }
 }
 
 @media (min-width:1100px) {
   .extendedNetwork {
     width: 38.25em;
+  }
+
+  .headerLinks {
+    height: 2.25em;
   }
 }
 
