--- a/src/static/App.css
+++ b/src/static/App.css
@@ -4,9 +4,9 @@
   --medium-blue: rgba(86, 176, 236, 0.904);
   --darker-blue: rgba(46, 119, 187, 0.87);
   --dark-orange: rgb(211, 141, 57);
-   /* rgba(255, 152, 26, 80); */
+  /* rgba(255, 152, 26, 80); */
   --yellow: rgba(255, 223, 158, 0.37);
-   /* rgba(255, 223, 158, 0.397); */
+  /* rgba(255, 223, 158, 0.397); */
   --white: rgba(255, 255, 255, 0.877);
   --black: rgba(0, 0, 0, 0.884);
 }
@@ -17,7 +17,6 @@ body {
 
 p, td {
   font-size: 1em;
-  
 }
 
 a {
@@ -65,11 +64,10 @@ a {
   margin-bottom: 0;
 }
 
-.navbar{
-  display:flex;
+.navbar {
+  display: flex;
   justify-content: space-between;
 }
-
 
 .headerLinks {
   position: relative;
@@ -91,12 +89,26 @@ a {
   border: 1px solid var(--black);
 }
 
-.contactTableHeader{
+.contactTableHeader {
   background-color: var(--medium-blue);
   color: var(--white);
 }
 
-img{
+a {
+  font-family: inherit;
+  color: var(--darker-blue);
+}
+
+button {
+  font-size: 100%;
+  font-family: inherit;
+  color: var(--darker-blue);
+  background-color: var(--white);
+  border: 0;
+  padding: 0;
+}
+
+img {
   max-width: 100%;
   height: auto;
 }
@@ -109,7 +121,6 @@ img{
     margin: 1em;
     height: 4em;
   }
-
   .headerLinks {
     height: 2em;
   }
@@ -123,7 +134,6 @@ img{
     height: 4em;
     width: 24em;
   }
-
   .headerLinks {
     height: 2.25em;
   }
@@ -133,7 +143,6 @@ img{
   .extendedNetwork {
     width: 38.25em;
   }
-
   .headerLinks {
     height: 2.25em;
   }
