--- a/src/static/App.css
+++ b/src/static/App.css
@@ -64,10 +64,12 @@ a {
   margin-bottom: 0;
 }
 
-.modal-image{
+
+.modal-image {
   padding: 1em;
   display: block;
 }
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -80,13 +82,13 @@ a {
 }
 
 .extendedNetwork {
-  font-size: 1.6em;
-  border: 2px solid var(--black);
-  padding: 1em;
+  /* background-color: green; */
+  width: 10em;
+  height: 4em;
+  /* border: 1px solid var(--black); */
+  padding:2em;
   margin: 1em;
-  height: 3em;
-  text-align: center;
-  width: 14em;
+
 }
 
 .contactTable {
