--- a/src/static/App.css
+++ b/src/static/App.css
@@ -81,15 +81,6 @@ a {
   color: var(--white);
 }
 
-.extendedNetwork {
-  /* background-color: green; */
-  width: 10em;
-  height: 4em;
-  /* border: 1px solid var(--black); */
-  padding:2em;
-  margin: 1em;
-
-}
 
 .contactTable {
   border: 1px solid var(--black);
@@ -118,13 +109,17 @@ img {
   max-width: 100%;
   height: auto;
 }
-
+/* 
+.extendedNetwork{
+  border: 1px solid var(--black);
+  text-align: center;
+}
 @media (min-width:500px) {
   .extendedNetwork {
-    font-size: 1.75em;
-    width: 18em;
-    padding: 2em;
-    margin: 1em;
+    font-size: 0.75em;
+    width: 5em;
+    padding: 1em;
+    margin: 0.5em;
     height: 4em;
   }
   .headerLinks {
@@ -137,7 +132,6 @@ img {
     font-size: 2em;
     padding: 2em;
     margin: 1em;
-    height: 4em;
     width: 24em;
   }
   .headerLinks {
@@ -152,7 +146,7 @@ img {
   .headerLinks {
     height: 2.25em;
   }
-}
+} */
 
 /* #mobileVsDesktop{
   background-color: blue;
