--- a/src/static/App.css
+++ b/src/static/App.css
@@ -4,9 +4,7 @@
   --medium-blue: rgba(86, 176, 236, 0.904);
   --darker-blue: rgba(46, 119, 187, 0.87);
   --dark-orange: rgb(211, 141, 57);
-  /* rgba(255, 152, 26, 80); */
   --yellow: rgba(255, 223, 158, 0.37);
-  /* rgba(255, 223, 158, 0.397); */
   --white: rgba(255, 255, 255, 0.877);
   --black: rgba(0, 0, 0, 0.884);
 }
@@ -24,6 +22,10 @@ a {
   padding: 0.25em;
 }
 
+.small-container {
+  margin: 0 1.7rem;
+}
+
 .tablePromps {
   padding: 1em;
   background-color: var(--light-medium-blue);
@@ -35,7 +37,7 @@ a {
   background-color: var(--light-blue);
 }
 
-.blurbPrompt {
+.infoPrompt {
   color: var(--dark-orange);
 }
 
@@ -53,7 +55,6 @@ a {
 
 .navSearchBar {
   color: var(--white);
-  margin-right: 3.5em;
 }
 
 .bioDiv {
@@ -108,50 +109,11 @@ img {
   max-width: 100%;
   height: auto;
 }
-/* 
-.extendedNetwork{
-  border: 1px solid var(--black);
-  text-align: center;
-}
-@media (min-width:500px) {
-  .extendedNetwork {
-    font-size: 0.75em;
-    width: 5em;
-    padding: 1em;
-    margin: 0.5em;
-    height: 4em;
-  }
-  .headerLinks {
-    height: 2em;
-  }
-}
 
-@media (min-width:800px) {
-  .extendedNetwork {
-    font-size: 2em;
-    padding: 2em;
-    margin: 1em;
-    width: 24em;
-  }
-  .headerLinks {
-    height: 2.25em;
-  }
+/* Bootstrap overrides */
+.form-control {
+  flex-flow: nowrap;
+  margin: 0 0.5rem;
+  padding: 0.25rem 0.5rem !important;
+  width: auto !important;
 }
-
-@media (min-width:1100px) {
-  .extendedNetwork {
-    width: 38.25em;
-  }
-  .headerLinks {
-    height: 2.25em;
-  }
-} */
-
-/* #mobileVsDesktop{
-  background-color: blue;
-  display:flex;
-  flex-direction: row;
-  @media (max-width: 768px){
-    flex-direction: column;
-  }
-} */
